Test cases added for the ProsecutionConcludedImplTest and concluded request